@@ -1,3 +1,6 @@
+Tue Sep 13 09:47:58 CEST 2011
+	Try to release responses more promptly upon connection termination. -CG
+
 Mon Sep 12 10:20:28 CEST 2011
 	Releasing libmicrohttpd 0.9.14. -CG
 
